2004-12-17  Jim Huang  <jserv@kaffe.org>
	* Initial import of IIIMF-chewing 0.0.2