@@ -29,7 +29,9 @@
 #include <iconv.h>
 
 #include <X11/Xmd.h>
+#ifndef CARD32BIT
 #define CARD32BIT CARD32
+#endif
 
 /*
  * header files for SunIM library
@@ -54,10 +56,9 @@ typedef struct chewing_session {
 	int conv_on;
 	int focus_on;
 
-	int luc_start;
 	int preedit_start;
-
 #if 0
+	int luc_start;
 	int status_start;
 	long fLastUpdateLength;
 	int caret_pos;
@@ -69,7 +70,8 @@ int get_session_caret_pos(iml_session_t *s)
 {
 	int pos = 0;
 	if (s && s->specific_data) {
-		chewing_session_t *session = (chewing_session_t *)s->specific_data;
+		chewing_session_t *session = 
+			(chewing_session_t *)s->specific_data;
 		pos = session->chewing_output.chiSymbolCursor;
 		if (pos < 0 || pos > 100)
 			pos = 0;
@@ -77,10 +79,12 @@ int get_session_caret_pos(iml_session_t *s)
 	return pos;
 }
 
-IMFeedbackList *create_feedback (iml_session_t *s, int size)
+IMFeedbackList *create_feedback(iml_session_t *s, int size)
 {
 	IMFeedbackList *feedback =
-		(IMFeedbackList *) s->If->m->iml_new(s, sizeof(IMFeedbackList) * size);
+		(IMFeedbackList *) s->If->m->iml_new(
+			s, 
+			sizeof(IMFeedbackList) * size);
 	memset(feedback, 0, sizeof(IMFeedbackList) * size);
 
 	while (size-- > 0) {
@@ -89,7 +93,9 @@ IMFeedbackList *create_feedback (iml_session_t *s, int size)
 		fbl->feedbacks = 
 			(IMFeedback *)s->If->m->iml_new(
 				s, fbl->count_feedbacks*sizeof(IMFeedback));
-		memset(fbl->feedbacks, 0, fbl->count_feedbacks*sizeof(IMFeedback));
+		memset(
+			fbl->feedbacks, 0, 
+			fbl->count_feedbacks*sizeof(IMFeedback));
 
 		IMFeedback *fb = &(fbl->feedbacks[0]);
 		IM_FEEDBACK_TYPE(fb) = IM_DECORATION_FEEDBACK;
@@ -100,17 +106,17 @@ IMFeedbackList *create_feedback (iml_session_t *s, int size)
 }
 
 
-UTFCHAR chewing_string[] = {0x9177, 0x97f3, 0x0};
+UTFCHAR chewing_string[] = { 0x9177, 0x97f3, 0x0 };
 
-void status_draw (iml_session_t *s)
+void status_draw(iml_session_t *s)
 {
 	iml_inst *lp = NULL;
 	iml_inst *rrv = NULL;
 
 	if (s == NULL || s->specific_data == NULL)
 		return;
-	chewing_session_t *session = (chewing_session_t *)s->specific_data;
-	if (!session->conv_on /* || !session->focus_on */) {
+	chewing_session_t *session = (chewing_session_t *) s->specific_data;
+	if ( ! session->conv_on /* || !session->focus_on */) {
 		lp = s->If->m->iml_make_status_done_inst(s);
 		s->If->m->iml_execute(s, &lp);
 		return;
@@ -131,7 +137,7 @@ void status_draw (iml_session_t *s)
 	s->If->m->iml_execute(s, &rrv);
 }
 
-void commit (iml_session_t *s)
+void commit(iml_session_t *s)
 {
 	int len, i, buflen;
 	char buf[128], *bufp = buf, *bufutfp;
@@ -148,7 +154,7 @@ void commit (iml_session_t *s)
 	p->encoding = UTF16_CODESET;
 
 	memset (buf, 0, 128);
-	for (i=0; i<op->nCommitStr; ++i) {
+	for ( i = 0; i < op->nCommitStr; ++i ) {
 		strcat (buf, op->commitStr[i].s);
 	}
 
@@ -183,16 +189,20 @@ int does_preedit_contain_text(iml_session_t *s)
 	ChewingOutput *op = &session->chewing_output;
 
 	int i, len=0;
-	for(i=0; len == 0 && i<op->chiSymbolCursor; ++i)
-		if (op->chiSymbolBuf[i].s[0]) len = 1;
-	for(i=0; len == 0 && i<ZUIN_SIZE; ++i)
-		if (op->zuinBuf[i].s[0]) len = 1;
-	for(i=op->chiSymbolCursor; len == 0 && i < op->chiSymbolBufLen; ++i)
-		if (op->chiSymbolBuf[i].s[0]) len = 1;
+	for (i = 0; (len == 0) && (i < op->chiSymbolCursor); ++i)
+		if (op->chiSymbolBuf[i].s[0])
+			len = 1;
+	for (i = 0; (len == 0) && (i < ZUIN_SIZE); ++i)
+		if (op->zuinBuf[i].s[0])
+			len = 1;
+	for (i = op->chiSymbolCursor; 
+			(len == 0) && (i < op->chiSymbolBufLen); ++i)
+		if (op->chiSymbolBuf[i].s[0])
+			len = 1;
 	return len;
 }
 
-IMText *make_preedit_imtext (iml_session_t *s)
+IMText *make_preedit_imtext(iml_session_t *s)
 {
 	int len, i, zuinlen = 0, buflen;
 	char buf[128], *bufp = buf, *bufutfp;
@@ -203,15 +213,15 @@ IMText *make_preedit_imtext (iml_session_t *s)
 	IMText *p = (IMText *) s->If->m->iml_new(s, sizeof(IMText));
 	memset(p, 0, sizeof(IMText));
 
-	for(i=0; i<op->chiSymbolCursor; ++i)
+	for (i = 0; i < op->chiSymbolCursor; ++i)
 		strcat (buf, op->chiSymbolBuf[i].s);
 	len = strlen(buf);
 
-	for(i=0; i<ZUIN_SIZE; ++i) {
-		strcat (buf, op->zuinBuf[i].s);
+	for (i = 0; i < ZUIN_SIZE; ++i) {
+		strcat(buf, op->zuinBuf[i].s);
 	}
-	zuinlen = (strlen (buf) - len) / 2;
-	for(i=op->chiSymbolCursor; i < op->chiSymbolBufLen; ++i)
+	zuinlen = (strlen(buf) - len) / 2;
+	for (i = op->chiSymbolCursor; i < op->chiSymbolBufLen; ++i)
 		strcat (buf, op->chiSymbolBuf[i].s);
 	len = strlen (buf) + 1;
 	p->encoding = UTF16_CODESET;
@@ -222,10 +232,12 @@ IMText *make_preedit_imtext (iml_session_t *s)
 	memset(p->text.utf_chars, 0, buflen);
 
 	DEBUG_printf("Big5 text is %s\n", buf);
-	DEBUG_printf("drawing preedit (charlen = %d, big5_bytes_len = %d)\n", p->char_length, len-1);
+	DEBUG_printf(
+		"drawing preedit (charlen = %d, big5_bytes_len = %d)\n", 
+		p->char_length, len - 1);
 
-	bufutfp = (char *)p->text.utf_chars;
-	iconv(iconv_context, (char **)&bufp, &len, &bufutfp, &buflen);
+	bufutfp = (char *) p->text.utf_chars;
+	iconv(iconv_context, (char **) &bufp, &len, &bufutfp, &buflen);
 
 	p->feedback = create_feedback(s, p->char_length);
 	return p;
@@ -250,7 +262,7 @@ void init_session_context(iml_session_t *s)
 
 	config.selectAreaLen = 40;
 	config.maxChiSymbolLen = 16;
-	for(i=0; i<9; i++)
+	for (i = 0; i < 9; i++)
 		config.selKey[i] = i + '1';
 	config.selKey[9] = '0';
 	SetConfig(&session->chewing_data, &config);
@@ -264,7 +276,7 @@ void open_preedit(iml_session_t *s)
 {
 	iml_inst *lp = NULL;
 	chewing_session_t *session = (chewing_session_t*)s->specific_data;
-	if (!session->preedit_start) {
+	if (! session->preedit_start) {
 		lp = s->If->m->iml_make_preedit_start_inst(s);
 		s->If->m->iml_execute(s, &lp);
 	}
@@ -274,7 +286,7 @@ void open_preedit(iml_session_t *s)
 void close_preedit(iml_session_t *s)
 {
 	iml_inst *lp=NULL, *rrv = NULL;
-	chewing_session_t *session = (chewing_session_t*)s->specific_data;
+	chewing_session_t *session = (chewing_session_t*) s->specific_data;
 	if (session->preedit_start) {
 		lp = s->If->m->iml_make_preedit_erase_inst(s);
 		s->If->m->iml_link_inst_tail(&rrv, lp);
@@ -329,7 +341,7 @@ void open_candidate(iml_session_t *s)
 	//    session->luc_start = True;
 }
 
-void close_candidate (iml_session_t *s)
+void close_candidate(iml_session_t *s)
 {
 	//chewing_session_t *session = (chewing_session_t *)s->specific_data;
 
@@ -340,7 +352,7 @@ void close_candidate (iml_session_t *s)
 	//    session->luc_start = False;
 }
 
-void draw_candidate (iml_session_t *s)
+void draw_candidate(iml_session_t *s)
 {
 	iml_inst *lp=NULL;
 	chewing_session_t *session = (chewing_session_t *)s->specific_data;
@@ -351,36 +363,54 @@ void draw_candidate (iml_session_t *s)
 
 	open_candidate(s);
 
-	draw = (IMLookupDrawCallbackStruct *) s->If->m->iml_new(s, sizeof(IMLookupDrawCallbackStruct));
+	draw = (IMLookupDrawCallbackStruct *)
+		s->If->m->iml_new(s, sizeof(IMLookupDrawCallbackStruct));
 	memset(draw, 0, sizeof(IMLookupDrawCallbackStruct));
 	draw->n_choices = pci->nTotalChoice - fc;
 	if (draw->n_choices > pci->nChoicePerPage) 
 		draw->n_choices = pci->nChoicePerPage;
 	draw->index_of_current_candidate = draw->index_of_first_candidate = 0;
-	draw->index_of_last_candidate = draw->index_of_first_candidate + draw->n_choices - 1;
+	draw->index_of_last_candidate = 
+		draw->index_of_first_candidate + draw->n_choices - 1;
 	draw->title = NULL;
 
 	draw->title = (IMText *) s->If->m->iml_new(s, sizeof(IMText));
 	memset(draw->title, 0, sizeof(IMText));
 	draw->title->encoding = UTF16_CODESET;
 	draw->title->char_length = 2;
-	draw->title->text.utf_chars = (UTFCHAR *) s->If->m->iml_new(s, sizeof(IMText) * (draw->title->char_length + 1));
-	memset(draw->title->text.utf_chars, 0, sizeof(IMText) * (draw->title->char_length + 1));
-	memcpy (draw->title->text.utf_chars, chewing_string, (draw->title->char_length + 1) * sizeof(UTFCHAR));
+	draw->title->text.utf_chars = 
+		(UTFCHAR *) s->If->m->iml_new(
+			s, 
+			sizeof(IMText) * (draw->title->char_length + 1));
+	memset(
+		draw->title->text.utf_chars, 0, 
+		sizeof(IMText) * (draw->title->char_length + 1));
+	memcpy (
+		draw->title->text.utf_chars, chewing_string, 
+		(draw->title->char_length + 1) * sizeof(UTFCHAR));
 	draw->title->feedback = create_feedback(s, draw->title->char_length);
 
-	DEBUG_printf("%d of %d choices, starting at %d\n", draw->n_choices, draw->n_choices, draw->index_of_first_candidate);
+	DEBUG_printf(
+		"%d of %d choices, starting at %d\n", 
+		draw->n_choices, 
+		draw->n_choices, 
+		draw->index_of_first_candidate);
 
 	IMText **candidates = NULL, **labels=NULL;
-	candidates = (IMText **) s->If->m->iml_new(s, draw->n_choices * sizeof(IMText *));
+	candidates = 
+		(IMText **) s->If->m->iml_new(
+			s, 
+			draw->n_choices * sizeof(IMText *));
 	memset(candidates, 0, draw->n_choices * sizeof(IMText *));
-	for (i=0; i < draw->n_choices; ++i) {
-		int buflen = 0, len=0;
+	for (i = 0; i < draw->n_choices; ++i) {
+		int buflen = 0, len = 0;
 		char *bufutfp = NULL;
 		char *bufp = pci->totalChoiceStr[fc+i];
-		DEBUG_printf("        --%d. %s\n", i+1, bufp); DEBUG_fflush(stdout);
+		DEBUG_printf("        --%d. %s\n", i+1, bufp); 
+		DEBUG_fflush(stdout);
 
-		IMText *vt = candidates[i] = (IMText *)s->If->m->iml_new(s, sizeof(IMText));
+		IMText *vt = candidates[i] = 
+			(IMText *)s->If->m->iml_new(s, sizeof(IMText));
 		memset(vt, 0, sizeof(IMText));
 
 		vt->encoding = UTF16_CODESET;
@@ -395,21 +425,26 @@ void draw_candidate (iml_session_t *s)
 		vt->feedback = create_feedback(s, vt->char_length);
 	}
 
-	labels = (IMText **) s->If->m->iml_new(s, draw->n_choices * sizeof(IMText *));
+	labels = (IMText **) s->If->m->iml_new(
+		s, 
+		draw->n_choices * sizeof(IMText *));
 	memset(labels, 0, draw->n_choices * sizeof(IMText *));
-	for (i=0; i < draw->n_choices; ++i) {
-		IMText *lt = labels[i] = (IMText *)s->If->m->iml_new(s, sizeof(IMText));
+	for (i = 0; i < draw->n_choices; ++i) {
+		IMText *lt = labels[i] = 
+			(IMText *)s->If->m->iml_new(s, sizeof(IMText));
 		memset(lt, 0, sizeof(IMText));
 		lt->encoding = UTF16_CODESET;
 		lt->char_length = 1;
-		lt->text.utf_chars = (UTFCHAR *)s->If->m->iml_new(s, 2*sizeof(UTFCHAR));
+		lt->text.utf_chars = 
+			(UTFCHAR *) s->If->m->iml_new(s, 2*sizeof(UTFCHAR));
 		lt->text.utf_chars[0] = (UTFCHAR)(i+'1');
 		lt->text.utf_chars[1] = (UTFCHAR)0;
 		lt->feedback = create_feedback(s, lt->char_length);
 	}
 
-
-	draw->choices = (IMChoiceObject *)s->If->m->iml_new(s, draw->n_choices * sizeof(IMChoiceObject));
+	draw->choices = (IMChoiceObject *) s->If->m->iml_new(
+		s, 
+		draw->n_choices * sizeof(IMChoiceObject));
 	memset(draw->choices, 0, draw->n_choices * sizeof(IMChoiceObject));
 	for (i = draw->max_len = 0; i < draw->n_choices; i++) {
 		draw->choices[i].value = candidates[i];
@@ -421,10 +456,11 @@ void draw_candidate (iml_session_t *s)
 	s->If->m->iml_execute(s, &lp);
 }
 
-void handle_candidate (iml_session_t *s)
+void handle_candidate(iml_session_t *s)
 {
 	if (s) {
-		chewing_session_t *session = (chewing_session_t *)s->specific_data;
+		chewing_session_t *session = 
+			(chewing_session_t *) s->specific_data;
 
 		if (
 			session && 
@@ -437,9 +473,10 @@ void handle_candidate (iml_session_t *s)
 	}
 }
 
-void chewing_conversion_on (iml_session_t *s)
+void chewing_conversion_on(iml_session_t *s)
 {
-	if (s == NULL || s->specific_data == NULL) return;
+	if (s == NULL || s->specific_data == NULL) 
+		return;
 
 	chewing_session_t *session = (chewing_session_t *)s->specific_data;
 	iml_inst *lp = s->If->m->iml_make_start_conversion_inst(s);
@@ -468,13 +505,15 @@ void chewing_conversion_off (iml_session_t *s)
 
 /* IF method implementation */
 
-Bool if_chewing_OpenIF (iml_if_t *If)
+Bool if_chewing_OpenIF(iml_if_t *If)
 {
 	/* fix the data installation path and put it here */
 	char *prefix = CHEWING_DATADIR;
 
-	iconv_context = iconv_open ("UTF-16LE", "BIG5");
-	DEBUG_printf("  ====> Chewing opening, iconv handle is %d ...", (int)iconv_context);
+	iconv_context = iconv_open("UTF-16LE", "BIG5");
+	DEBUG_printf(
+		"  ====> Chewing opening, iconv handle is %d ...", 
+		(int) iconv_context);
 
 	ReadTree(prefix);
 	InitChar(prefix);
@@ -486,7 +525,7 @@ Bool if_chewing_OpenIF (iml_if_t *If)
 }
 
 /* FIX_NEEDED! Memory Leak! But not serious */
-Bool if_chewing_CloseIF (iml_if_t *If)
+Bool if_chewing_CloseIF(iml_if_t *If)
 {
 	DEBUG_printf("  ====> Chewing closing...");
 	iconv_close(iconv_context);
@@ -494,42 +533,53 @@ Bool if_chewing_CloseIF (iml_if_t *If)
 	return True;
 }
 
-Bool if_chewing_GetIFValues (iml_if_t *If, IMArgList args, int num_args)
+Bool if_chewing_GetIFValues(iml_if_t *If, IMArgList args, int num_args)
 {
 	return True;
 }
 
-Bool if_chewing_SetIFValues (iml_if_t *If, IMArgList args, int num_args)
+Bool if_chewing_SetIFValues(iml_if_t *If, IMArgList args, int num_args)
 {
 	return True;
 }
 
-Bool if_chewing_OpenDesktop (iml_desktop_t *desktop, IMArgList args, int num_args)
+Bool if_chewing_OpenDesktop(
+		iml_desktop_t *desktop, 
+		IMArgList args, 
+		int num_args)
 {
-	DEBUG_printf("  ====> Chewing open desktop...done!\n"); DEBUG_fflush(stdout);
+	DEBUG_printf("  ====> Chewing open desktop...done!\n"); 
+	DEBUG_fflush(stdout);
 	return True;
 }
 
 Bool if_chewing_CloseDesktop(iml_desktop_t *desktop)
 {
-	DEBUG_printf("  ====> Chewing close desktop...done!\n"); DEBUG_fflush(stdout);
+	DEBUG_printf("  ====> Chewing close desktop...done!\n"); 
+	DEBUG_fflush(stdout);
 	return True;
 }
 
-Bool if_chewing_CreateSC (iml_session_t *s, IMArgList args, int num_args)
+Bool if_chewing_CreateSC(iml_session_t *s, IMArgList args, int num_args)
 {
-	DEBUG_printf("  ====> Chewing create session..."); DEBUG_fflush(stdout);
+	DEBUG_printf("  ====> Chewing create session..."); 
+	DEBUG_fflush(stdout);
 
 	s->specific_data = NULL;
 	init_session_context(s);
 
-	DEBUG_printf("created session data %x, done!\n", (unsigned int)s->specific_data); DEBUG_fflush(stdout);
+	DEBUG_printf(
+		"created session data %x, done!\n", 
+		(unsigned int) s->specific_data); 
+	DEBUG_fflush(stdout);
 	return True;
 }
 
-Bool if_chewing_DestroySC (iml_session_t *s)
+Bool if_chewing_DestroySC(iml_session_t *s)
 {
-	DEBUG_printf("  ====> Chewing destroy session..."); DEBUG_fflush(stdout);
+	DEBUG_printf("  ====> Chewing destroy session..."); 
+	DEBUG_fflush(stdout);
+
 	if (s->specific_data != NULL) {
 		close_candidate(s);
 		close_preedit(s);
@@ -537,7 +587,8 @@ Bool if_chewing_DestroySC (iml_session_t *s)
 		free(s->specific_data);
 		s->specific_data = NULL;
 	}
-	DEBUG_printf("  done\n"); DEBUG_fflush(stdout);
+	DEBUG_printf("  done\n"); 
+	DEBUG_fflush(stdout);
 	return True;
 }
 
@@ -562,18 +613,24 @@ Bool if_chewing_SetSCValues (iml_session_t *s, IMArgList args, int num_args)
 	for (i = 0; i < num_args; i++, p++) {
 		switch (p->id) {
 			case SC_TRIGGER_ON_NOTIFY:
-				DEBUG_printf("  ====> Chewing SC_TRIGGER_ON_NOTIFY \n");
+				DEBUG_printf(
+				"  ====> Chewing SC_TRIGGER_ON_NOTIFY \n");
 				chewing_conversion_on(s);
 				break;
 			case SC_TRIGGER_OFF_NOTIFY:
-				DEBUG_printf("  ====> Chewing SC_TRIGGER_OFF_NOTIFY \n");
+				DEBUG_printf(
+				"  ====> Chewing SC_TRIGGER_OFF_NOTIFY \n");
 				chewing_conversion_off(s);
 				break;
 			case SC_REALIZE:
-				if(s->desktop->session_count == 1){
-					DEBUG_printf("  ====> Chewing SC_REALIZE: just after OpenDesktop\n");
+				if (s->desktop->session_count == 1) {
+					DEBUG_printf(
+					"  ====> Chewing SC_REALIZE: "
+					"just after OpenDesktop\n");
 				} else {
-					DEBUG_printf("  ====> Chewing SC_REALIZE: received\n");
+					DEBUG_printf(
+					"  ====> Chewing SC_REALIZE: "
+					"received\n");
 				}
 				break;
 			default:
@@ -583,7 +640,7 @@ Bool if_chewing_SetSCValues (iml_session_t *s, IMArgList args, int num_args)
 	return True;
 }
 
-IMText *if_chewing_ResetSC (iml_session_t *s)
+IMText *if_chewing_ResetSC(iml_session_t *s)
 {
 	close_candidate(s);
 	close_preedit(s);
@@ -591,39 +648,45 @@ IMText *if_chewing_ResetSC (iml_session_t *s)
 	return (IMText *) NULL;
 }
 
-void if_chewing_SetSCFocus (iml_session_t *s)
+void if_chewing_SetSCFocus(iml_session_t *s)
 {
-	if (s == NULL || s->specific_data == NULL) return;
+	if (s == NULL || s->specific_data == NULL)
+		return;
 
-	DEBUG_printf("  ====> Chewing set focus..."); DEBUG_fflush(stdout);
+	DEBUG_printf("  ====> Chewing set focus..."); 
+	DEBUG_fflush(stdout);
 
-	chewing_session_t *session = (chewing_session_t *)s->specific_data;
+	chewing_session_t *session = (chewing_session_t *) s->specific_data;
 	session->focus_on = True;
 
 	status_draw(s);
 	preedit_draw(s);
 	handle_candidate(s);
-	DEBUG_printf("  done\n"); DEBUG_fflush(stdout);
+	DEBUG_printf("  done\n"); 
+	DEBUG_fflush(stdout);
 }
 
-void if_chewing_UnsetSCFocus (iml_session_t *s)
+void if_chewing_UnsetSCFocus(iml_session_t *s)
 {
-	if (s == NULL || s->specific_data == NULL) return;
+	if (s == NULL || s->specific_data == NULL)
+		return;
 
-	DEBUG_printf("  ====> Chewing lose focus..."); DEBUG_fflush(stdout);
+	DEBUG_printf("  ====> Chewing lose focus..."); 
+	DEBUG_fflush(stdout);
 
-	chewing_session_t *session = (chewing_session_t *)s->specific_data;
+	chewing_session_t *session = (chewing_session_t *) s->specific_data;
 	session->focus_on = False;
 
 	//status_draw(s);
 	close_candidate(s);
 	//close_preedit(s);
-	DEBUG_printf("  done\n"); DEBUG_fflush(stdout);
+	DEBUG_printf("  done\n"); 
+	DEBUG_fflush(stdout);
 }
 
-void if_chewing_SendEvent (iml_session_t *s, IMInputEvent *ev)
+void if_chewing_SendEvent(iml_session_t *s, IMInputEvent *ev)
 {
-	chewing_session_t *session = (chewing_session_t *)s->specific_data;
+	chewing_session_t *session = (chewing_session_t *) s->specific_data;
 	ChewingOutput *op = &session->chewing_output;
 	ChewingData *pgdata = &session->chewing_data;
 	IMKeyListEvent *keylistevent;
@@ -634,8 +697,9 @@ void if_chewing_SendEvent (iml_session_t *s, IMInputEvent *ev)
 
 	keylistevent = (IMKeyListEvent *) ev;
 	key = (IMKeyEventStruct *) keylistevent->keylist;
-	DEBUG_printf("  ====> Chewing processing key (0X%X - 0X%X - 0X%X) ...\n", 
-			key->keyCode, key->keyChar, key->modifier); 
+	DEBUG_printf(
+		"  ====> Chewing processing key (0X%X - 0X%X - 0X%X) ...\n", 
+		key->keyCode, key->keyChar, key->modifier); 
 	DEBUG_fflush(stdout);
 
 	if ( (key->modifier & (IM_SHIFT_MASK | IM_CTRL_MASK | IM_ALT_MASK)) == IM_CTRL_MASK &&
@@ -706,29 +770,36 @@ void if_chewing_SendEvent (iml_session_t *s, IMInputEvent *ev)
 			break;
 
 		default:
-			/*
-			   if (key->modifier & (controlKey|rightControlKey) && (inCharCode > '0' && inCharCode < '9'))
+#if 0
+			if ((key->modifier & (controlKey|rightControlKey)) && 
+					(inCharCode > '0' && 
+					 inCharCode < '9'))
 			   OnKeyCtrlNum(pgdata, inCharCode, op);
 
 			   else if (inCharCode) {
-			   if (modifiers & alphaLock && !(modifiers & shiftKey))
+			   	if (modifiers & alphaLock && 
+						!(modifiers & shiftKey))
 			   inCharCode |= 32;
-			   */
+#endif
 			if (key->keyChar && (key->modifier & (IM_CTRL_MASK | IM_ALT_MASK)) == 0)
 				OnKeyDefault(pgdata, key->keyChar, op);
 			break;
 	}
 
-	DEBUG_printf("        ---->return bitmask 0x%x\n", op->keystrokeRtn); DEBUG_fflush(stdout);
+	DEBUG_printf("        ---->return bitmask 0x%x\n", op->keystrokeRtn); 
+	DEBUG_fflush(stdout);
 	if (op->keystrokeRtn & KEYSTROKE_COMMIT) {
 		DEBUG_printf("    ---->commiting...\n");
 		commit(s);
 	}
-	DEBUG_printf("        ---->update preedit...\n"); DEBUG_fflush(stdout);
+	DEBUG_printf("        ---->update preedit...\n"); 
+	DEBUG_fflush(stdout);
 	preedit_draw(s);
-	DEBUG_printf("        ---->handle candidate...\n"); DEBUG_fflush(stdout);
+	DEBUG_printf("        ---->handle candidate...\n"); 
+	DEBUG_fflush(stdout);
 	handle_candidate(s);
-	DEBUG_printf("done!"); DEBUG_fflush(stdout);
+	DEBUG_printf("done!"); 
+	DEBUG_fflush(stdout);
 
 	/* is there any way to bell on the client? */
 	/*
