@@ -1,2 +1,9 @@
+2005-03-22  Jim Huang  <jserv@kaffe.org>
+
+	* include/iml/SunIMMMan.h,
+	src/chewing.c:
+	Clean up.
+
 2004-12-17  Jim Huang  <jserv@kaffe.org>
+
 	* Initial import of IIIMF-chewing 0.0.2
